# ai-document-qa-bot

./: .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/db/: chroma.py  database.py  init_db.py
apps/api/app/routes/: test.py
apps/api/app/services/: openai_service.py
apps/web/: next.config.ts
apps/web/app/: page.tsx
apps/web/app/lib/: api.ts
apps/web/app/test/: page.tsx
scripts/: db-reset.sh  dev.sh
