[project]
  name = "doc-qa-api"
  version = "0.1.0"
  requires-python = ">=3.11"
  dependencies = [
      "fastapi>=0.109.0",
      "uvicorn[standard]>=0.27.0",
      "pydantic>=2.5.0",
      "pydantic-settings>=2.1.0",
      "python-dotenv>=1.0.0",
      "sqlalchemy[asyncio]>=2.0.0",
      "asyncpg>=0.29.0",
      "alembic>=1.13.0",
      "chromadb>=0.4.22",
      "openai>=1.10.0",
  ]